Fix pagination dropdown z-index [SCI-8538]

--- a/app/assets/stylesheets/repositories.scss
+++ b/app/assets/stylesheets/repositories.scss
@@ -127,7 +127,7 @@
     background-color: $color-white;
     display: flex;
     height: 5em;
-    z-index: 90;
+    z-index: 101;
 
     .pagination-info,
     .pagination-actions {
